# p1-prometheus-exporter

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  prometheus.yml.example
.github/workflows/: README.md  build-and-publish.yml
debian/: extended-description  service
docs/: kamstrup-162jxc-p1-prometheus-exporter.service
src/: lib.rs  main.rs
