[package]
name = "kamstrup-162jxc-p1-prometheus-exporter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-serial = "5.4.4"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
prometheus = "0.13"
regex = "1.10.6"
hyper = "1.4.1"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
log = "0.4.22"
clap = { version = "4.5.17", features = ["derive"] }
