[package]
name = "p1-prometheus-exporter-rs"
version = "0.1.0"
edition = "2021"
description = "A Prometheus exporter for P1 smart electricity meters"
license = "MIT"
authors = ["Christian Luijten <christian@luijten.org>", "Thijs Lemmens"]

[dependencies]
tokio-serial = "5.4.5"
tokio = { version = "1.49.0", features = ["full"] }
lazy_static = "1.5.0"
prometheus = "0.14.0"
regex = "1.12.2"
hyper = "1.8.1"
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = "0.1"
log = "0.4.29"
env_logger = "0.11.8"
clap = { version = "4.5.54", features = ["derive"] }

[package.metadata.deb]
copyright = "2024, Christian Luijten <christian@luijten.org>"
extended-description-file = "debian/extended-description"
maintainer = "Christian Luijten <christian@luijten.org>"
section = "net"
systemd-units = { enable = true }

